# hscool

./: .gitignore  README.md  cgen  cmp.sh  hscool  hscools.cabal  lcmp.sh  lexer  lp.sh  lps.sh  parser  r.sh  scmp.sh  semant  tmp.cl
examples/: good.cl  simple.cl
lexer/: cool  cool.hs  cool.x
src/: Hscool.hs
src/Common/: Types.hs
src/Hscool/: Types.hs
src/Hscool/CGen/: Assembly.hs  Gen.hs  Intermediate.hs  Main.hs  Preprocess.hs  Symbols.hs
src/Hscool/Lexer/: .#Base.x  Base.x
src/Hscool/Parser/: Base.y  Main.hs
src/Hscool/Semant/: GlobalEnv.hs  Main.hs  TypeCheck.hs  TypeEnv.hs
src/Hscool/Types/: AST.hs  Token.hs
src/Lexer/: Lexer.x
