Name:                hscool
Version:             0.1
Synopsis:            A toy language from Coursera compilers course.
Homepage:            https://www.coursera.org/course/compilers
License:             MIT
Author:              Aleksey Kladov
Maintainer:          Aleksey Kladov
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.2


Executable lexer
  Main-is:           Hscool/Lexer/Main.hs
  other-modules:     Hscool.Lexer.Base
                   , Hscool.Types.Token

  hs-source-dirs:    src

  Build-depends:     base
                   , array
                   , containers

  Build-tools:       alex



Executable parser
  Main-is:           Hscool/Parser/Main.hs
  other-modules:     Hscool.Lexer.Base
                   , Hscool.Parser.Base
                   , Hscool.Types.Token
                   , Hscool.Types.AST

  hs-source-dirs:    src

  Build-depends:     base
                   , array
                   , containers
                   , attoparsec
                   , bytestring

  Build-tools:       alex
                   , happy

Executable semant
  Main-is:           Hscool/Semant/Main.hs
  other-modules:     Hscool.Lexer.Base
                   , Hscool.Parser.Base
                   , Hscool.Types.AST
                   , Hscool.Semant.TypeEnv
                   , Hscool.Semant.GlobalEnv
                   , Hscool.Semant.TypeCheck

  hs-source-dirs:    src

  Build-depends:     base
                   , array
                   , containers

Executable cgen
  Main-is:           Hscool/CGen/Main.hs
  other-modules:     Hscool.Types.AST
                   , Hscool.CGen.Assembly
                   , Hscool.CGen.Gen
                   , Hscool.CGen.Preprocess
                   , Hscool.CGen.Intermediate

  hs-source-dirs:    src

  Build-depends:     base
                   , array
                   , containers
                   , MissingH
                   , mtl
                   , hashable
